--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8">
     <title>Интернет-магазин Девайс</title>
-    <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
@@ -21,18 +20,24 @@
               <li class="menu-user-item">
                 <form class="menu-user-form" action="https://echo.htmlacademy.ru/" method="post">
                   <label><input type="text" name="search" value="Текст поиска">
-                  <a class="menu-user-link" href="#">Найти</a>
                   </label>
+                  <button class="button-search">
+                    <a class="menu-user-link" href="#">Найти</a>
+                  </button>
                 </form>
               </li>
               <li class="menu-user-item">
-                <a class="menu-user-link" href="#">Войти</a>
-                <a class="menu-user-link visually-hidden" href="#">Выйти</a>
+                <button class="button-log">
+                  <a class="menu-user-link" href="#">Войти</a>
+                </button>
+                <button class="button-log">
+                  <a class="menu-user-link visually-hidden" href="#">Выйти</a>
+                </button>
               </li>
             </ul>
           </div>
           <div class="menu-user">
-            <ul class="menu-user-list">
+            <ul class="menu-user-list menu-user-list-action">
               <li class="menu-user-item">
                 <a class="menu-user-link" href="#">Сравнить</a>
               </li>
@@ -88,28 +93,29 @@
         </div>
       </div>
     </header>
-    <main>
+    <main class="main-container">
       <section class="advertising">
         <div class="container">
           <h2 class="visually-hidden">Рекламный слайдер</h2>
           <div class="slider-item slider-item-current">
-            <h3 class="visually-hidden">Квадрокоптер</h3>
             <div class="slider-gallery">
               <button class="slider-button slider-prev">
                 <span class="visually-hidden">Предыдущая страница</span>
               </button>
-              <a href="catalog.html"><img src="images/sliders/slider-1.png" width="560" height="560" alt="Квадрокоптер"></a>
+              <a href="catalog.html"><img class="slider-gallery-img" src="images/sliders/slider-1.png" width="530" height="530" alt="Квадрокоптер"></a>
               <button class="slider-button slider-next">
                 <span class="visually-hidden">Следующая страница</span>
               </button>
             </div>
             <div class="slider-wrapper">
+              <h3 class="visually-hidden">Квадрокоптер</h3>
               <div class="slider-number">01</div>
               <div class="slider-subtitle">Порхает как бабочка,
                 жалит как пчела!</div>
               <div class="slider-descr">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.
               </div>
-              <a class="main-link" href="catalog.html">Подробнее</a>
+              <div class="slider-line">
+                <a class="main-link" href="catalog.html">Подробнее</a>
               <ol class="slider-pagination">
                 <li class="slider-pagination-item">
                   <button class="slider-pagination-button slider-pagination-button-current">
@@ -127,31 +133,37 @@
                   </button>
                 </li>
               </ol>
-              <dl class="slider-specifications">
-                <dd>800 м</dd>
-                <dt>Дальность полета</dt>
-                <dd>50 м</dd>
-                <dt>Радиус поражения</dt>
-              </dl>
+              </div>
+              <ul class="slider-specifications-list">
+                <li class="slider-specifications-item">
+                  <p>800 м</p>
+                  <p class="slider-specifications-item-descr">Дальность полета</p>
+                </li>
+                <li class="slider-specifications-item">
+                  <p>50 м</p>
+                  <p class="slider-specifications-item-descr">Радиус поражения</p>
+                </li>
+              </ul>
             </div>
           </div>
           <div class="slider-item">
-            <h3 class="visually-hidden">Фитнес-браслет</h3>
             <div class="slider-gallery">
               <button class="slider-button slider-prev">
                 <span class="visually-hidden">Предыдущая страница</span>
               </button>
-              <a href="catalog.html"><img src="images/sliders/slider-2.png" width="560" height="560" alt="Фитнес-браслет"></a>
+              <a href="catalog.html"><img src="images/sliders/slider-2.png" width="530" height="530" alt="Фитнес-браслет"></a>
               <button class="slider-button slider-next">
                 <span class="visually-hidden">Следующая страница</span>
               </button>
             </div>
             <div class="slider-wrapper">
+              <h3 class="visually-hidden">Фитнес-браслет</h3>
               <div class="slider-number">02</div>
               <div class="slider-subtitle">Худеем правильно!</div>
               <div class="slider-descr">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.
               </div>
-              <a class="main-link" href="catalog.html">Подробнее</a>
+              <div class="slider-line">
+                <a class="main-link" href="catalog.html">Подробнее</a>
               <ol class="slider-pagination">
                 <li class="slider-pagination-item">
                   <button class="slider-pagination-button slider-pagination-button-current">
@@ -169,30 +181,34 @@
                   </button>
                 </li>
               </ol>
-              <dl class="slider-specifications">
-                <dd>48 часов</dd>
-                <dt>Без подзарядки</dt>
-              </dl>
+              </div>
+              <ul class="slider-specifications-list">
+                <li class="slider-specifications-item">
+                  <p>48 часов</p>
+                  <p class="slider-specifications-item-descr">Без подзарядки</p>
+                </li>
+              </ul>
             </div>
           </div>
           <div class="slider-item">
-            <h3 class="visually-hidden">Селфи-палка</h3>
             <div class="slider-gallery">
               <button class="slider-button slider-prev">
                 <span class="visually-hidden">Предыдущая страница</span>
               </button>
-              <a href="catalog.html"><img src="images/sliders/slider-3.png" width="560" height="560" alt="Палка для селфи"></a>
+              <a href="catalog.html"><img src="images/sliders/slider-3.png" width="530" height="530" alt="Палка для селфи"></a>
               <button class="slider-button slider-next">
                 <span class="visually-hidden">Следующая страница</span>
               </button>
             </div>
             <div class="slider-wrapper">
+              <h3 class="visually-hidden">Селфи-палка</h3>
               <div class="slider-number">03</div>
               <div class="slider-subtitle">Делай селфи,
                 как Бен Стиллер! </div>
               <div class="slider-descr">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 кг.
               </div>
-              <a class="main-link" href="catalog.html">Подробнее</a>
+              <div class="slider-line">
+                <a class="main-link" href="catalog.html">Подробнее</a>
               <ol class="slider-pagination">
                 <li class="slider-pagination-item">
                   <button class="slider-pagination-button slider-pagination-button-current">
@@ -210,14 +226,22 @@
                   </button>
                 </li>
               </ol>
-              <dl class="slider-specifications">
-                <dd>8,5 м</dd>
-                <dt>Длина палки</dt>
-                <dd>5 кг</dd>
-                <dt>Вес палки</dt>
-                <dd>Карбон</dd>
-                <dt>Материал</dt>
-              </dl>
+              </div>
+
+              <ul class="slider-specifications-list">
+                <li class="slider-specifications-item">
+                  <p>8,5 м</p>
+                  <p class="slider-specifications-item-descr">Длина палки</p>
+                </li>
+                <li class="slider-specifications-item">
+                  <p>5 кг</p>
+                  <p class="slider-specifications-item-descr">Вес палки</p>
+                </li>
+                <li class="slider-specifications-item">
+                  <p>Карбон</p>
+                  <p class="slider-specifications-item-descr">Материал</p>
+                </li>
+              </ul>
             </div>
           </div>
         </div>
@@ -270,26 +294,30 @@
       <section class="service">
         <div class="container">
           <h2 class="visually-hidden">Услуги</h2>
-          <ul class="service-list">
-            <li class="service-item"><a class="main-link main-link-current" href="#delivery">Доставка</a></li>
-            <li class="service-item"><a class="main-link" href="#guarantee">Гарантия</a></li>
-            <li class="service-item"><a class="main-link" href="#credit">Кредит</a></li>
-          </ul>
-          <div class="service-item-wrapper service-item-wrapper-current">
-            <h3 id="delivery" class="service-item-subtitle">Доставка</h3>
-            <div class="service-item-descr">Мы с удовольствием доставим ваш товар прямо
-              к вашему подъезду совершенно бесплатно! Ведь
-              мы неплохо заработаем, поднимая его на ваш этаж.</div>
-          </div>
-          <div class="service-item-wrapper">
-            <h3 id="guarantee" class="service-item-subtitle">Гарантия</h3>
-            <div class="service-item-descr">Если из-за возгорания купленного у нас товара у вас
-              сгорит дом — не переживайте, мы выдадим вам новый.
-              Товар, не дом, конечно же.</div>
-          </div>
-          <div class="service-item-wrapper">
-            <h3 id="credit" class="service-item-subtitle">Кредит</h3>
-            <div class="service-item-descr">Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для банка, разумеется.</div>
+          <div class="service-column">
+            <ul class="service-list">
+              <li class="service-item"><a class="main-link main-link-current" href="#delivery">Доставка</a></li>
+              <li class="service-item"><a class="main-link" href="#guarantee">Гарантия</a></li>
+              <li class="service-item"><a class="main-link" href="#credit">Кредит</a></li>
+            </ul>
+            <div class="service-wrapper">
+              <div class="service-item-wrapper service-item-wrapper-current">
+                <h3 id="delivery" class="service-item-subtitle">Доставка</h3>
+                <div class="service-item-descr">Мы с удовольствием доставим ваш товар прямо
+                  к вашему подъезду совершенно бесплатно! Ведь
+                  мы неплохо заработаем, поднимая его на ваш этаж.</div>
+              </div>
+              <div class="service-item-wrapper">
+                <h3 id="guarantee" class="service-item-subtitle">Гарантия</h3>
+                <div class="service-item-descr">Если из-за возгорания купленного у нас товара у вас
+                  сгорит дом — не переживайте, мы выдадим вам новый.
+                  Товар, не дом, конечно же.</div>
+              </div>
+              <div class="service-item-wrapper">
+                <h3 id="credit" class="service-item-subtitle">Кредит</h3>
+                <div class="service-item-descr">Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для банка, разумеется.</div>
+              </div>
+            </div>
           </div>
           <div class="order">
             <h3 class="visually-hidden">Доставка под заказ</h3>
@@ -297,7 +325,7 @@
           </div>
         </div>
       </section>
-      <index-column>
+      <div class="index-column">
         <div class="container">
           <section class="about">
             <h2 class="title">О нас</h2>
@@ -315,7 +343,7 @@
           <section class="contacts">
             <h2 class="title">Контакты</h2>
             <div class="contacts-descr">Вы можете забрать товар сами, заехав в наш офис.
-              Заодно сможете проверить работоспособность покупки. </div>
+              <br>Заодно сможете проверить работоспособность покупки. </div>
             <h3 class="contacts-subtitle">Интернет-магазин «Девайс»</h3>
             <address>
               <p class="contacts-address">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
@@ -329,18 +357,22 @@
             <button class="main-link">Напишите нам</button>
           </section>
         </div>
-      </index-column>
+      </div>
       <section class="mailing">
         <div class="container">
-          <h2 class="title">Подпишитесь
-            на рассылку</h2>
-          <div class="mailing-descr">Еженедельный дайджест с обзорами новинок,
-              длительными тест-драйвами, распаковками, а также акции, спецпредложения и вот это вот всё.</div>
-          <form class="form-email" action="https://echo.htmlacademy.ru/" method="post">
-            <input type="email" name="email" value="Ваш e-mail">
-            <button class="button" type="submit">Подписаться</button>
-          </form>
-          <p>Это бесплатно</p>
+          <div class="mailing-wrapper">
+            <h2 class="title">Подпишитесь
+              на рассылку</h2>
+            <div class="mailing-descr">Еженедельный дайджест с обзорами новинок,
+                длительными тест-драйвами, распаковками, а также акции, спецпредложения и вот это вот всё.</div>
+          </div>
+          <div class="mailing-wrapper">
+            <form class="form-email" action="https://echo.htmlacademy.ru/" method="post">
+              <input type="email" name="email" value="Ваш e-mail">
+              <button class="button" type="submit">Подписаться</button>
+            </form>
+            <p>Это бесплатно</p>
+          </div>
         </div>
       </section>
       <footer>
@@ -354,37 +386,35 @@
             <div class="address">
               <p class="footer-address">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
             </div>
-            <div class="menu footer-menu">
-              <ul class="footer-menu-list">
+            <ul class="footer-menu-list">
                 <li><a class="service-item footer-menu-item" href="#delivery">Доставка</a></li>
                 <li><a class="service-item footer-menu-item" href="#delivery">Гарантия</a></li>
                 <li><a class="service-item footer-menu-item" href="#delivery">Кредит</a></li>
-              </ul>
-            </div>
+            </ul>
             <div class="address">
               <a class="footer-phone" href="tel:88128121212">+7 (812) 812-12-12</a>
             </div>
           </div>
           <div class="footer-bottom">
-            <div class="social">
-              <ul class="social-list">
-                <li class="social-item">
-                  <a class="social-link" href="https://wwww.facebook.com/htmlacademy">
-                    <span class="visually-hidden">Facebook</span>
-                  </a>
-                </li>
-                <li class="social-item">
-                  <a class="social-link" href="https://wwww.instagram.com/htmlacademy/">
-                    <span class="visually-hidden">Instagram</span>
-                  </a>
-                </li>
-                <li class="social-item">
-                  <a class="social-link" href="https://wwww.twitter.com/htmlacademy_ru">
-                    <span class="visually-hidden">Twitter</span>
-                  </a>
-                </li>
-              </ul>
+            <div class="footer-line">
             </div>
+            <ul class="social-list">
+              <li class="social-item">
+                <a class="social-link" href="https://wwww.facebook.com/htmlacademy">
+                  <span class="visually-hidden">Facebook</span>
+                </a>
+              </li>
+              <li class="social-item">
+                <a class="social-link" href="https://wwww.instagram.com/htmlacademy/">
+                  <span class="visually-hidden">Instagram</span>
+                </a>
+              </li>
+              <li class="social-item">
+                <a class="social-link" href="https://wwww.twitter.com/htmlacademy_ru">
+                  <span class="visually-hidden">Twitter</span>
+                </a>
+              </li>
+            </ul>
             <div class="made-in">
               <a href="https://htmlacademy.ru">
                 <img src="images/logo/logo-htmlacademy.svg" width="115" height="33" alt="Сделано в Html-Academy ">
