made sticky footer

--- a/catalog.html
+++ b/catalog.html
@@ -93,7 +93,7 @@
         </div>
       </div>
     </header>
-    <main class="main-inner">
+    <main class="main-inner main-container">
       <div class="container">
         <h1 class="title">Моноподы для селфи</h1>
       </div>
