corrections flex layout

--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1 class="visually-hidden">Интернет-магазин электроники Девайс</h1>
-    <header>
+    <header class="main-header">
       <div class="container">
         <div class="header-top">
           <a href="">
@@ -247,7 +247,7 @@
         </div>
       </section>
     </main>
-    <footer>
+    <footer class="main-footer">
       <div class="container">
         <div class="footer-top">
           <a href="">
