--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1 class="visually-hidden">Интернет-магазин электроники Девайс</h1>
-    <header>
+    <header class="main-header">
       <div class="container">
         <div class="header-top">
           <a href="">
@@ -31,7 +31,10 @@
                   <a class="menu-user-link" href="#">Войти</a>
                 </button>
                 <button class="button-log">
-                  <a class="menu-user-link visually-hidden" href="#">Выйти</a>
+                  <a class="menu-user-link" href="#">Выйти</a>
+                </button>
+                <button class="button-log">
+                  <a class="menu-user-link" href="#">Имя пользователя</a>
                 </button>
               </li>
             </ul>
@@ -93,7 +96,7 @@
         </div>
       </div>
     </header>
-    <main class="main-container">
+    <main>
       <section class="advertising">
         <div class="container">
           <h2 class="visually-hidden">Рекламный слайдер</h2>
@@ -319,6 +322,10 @@
               </div>
             </div>
           </div>
+        </div>
+      </section>
+      <section>
+        <div class="container">
           <div class="order">
             <h3 class="visually-hidden">Доставка под заказ</h3>
             <button class="order-button">Доставим редкий товар под заказ</button>
@@ -375,7 +382,7 @@
           </div>
         </div>
       </section>
-      <footer>
+      <footer class="main-footer">
         <div class="container">
           <div class="footer-top">
             <a href="">
